解决过期提醒无法跳转问题
